--- a/_src/_layouts/default.html
+++ b/_src/_layouts/default.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
+  <link rel="stylesheet" href="https://use.typekit.net/lqd7ddy.css" />
   <style>
   {% include style.min.css %}
   </style>
