--- a/_src/assets/style/style.scss
+++ b/_src/assets/style/style.scss
@@ -1,4 +1,8 @@
 @import "vendor/normalize";
 @import "partials/variables";
+@import "partials/animations";
 @import "partials/typography";
 @import "partials/global";
+@import "partials/hero";
+
+@import "partials/nav";
