--- a/_src/assets/style/partials/_hero.scss
+++ b/_src/assets/style/partials/_hero.scss
@@ -43,8 +43,8 @@
     opacity: 0;
     animation: {
       name: fadeInUpHero;
-      delay: 400ms;
-      duration: 800ms;
+      delay: 1200ms;
+      duration: 500ms;
       fill-mode: forwards;
       timing-function: ease-out;
     }
@@ -53,7 +53,13 @@
 
   h1,
   h2 {
+
     color: $white;
+
+    &::selection {
+      background: $black-off;
+    }
+
   }
 
   h1 {
@@ -71,7 +77,7 @@
     margin: 0px;
     font-size: 1.25rem;
 
-    @media screen and (min-width: $screen-lg) {
+    @media screen and (min-width: $screen-md) {
       font-size: 1.375rem;
     }
 
