--- a/_src/assets/style/partials/_nav.scss
+++ b/_src/assets/style/partials/_nav.scss
@@ -45,9 +45,15 @@ nav {
       }
 
       @media screen and (min-width: $screen-md) {
+
+        &:not(:first-child) {
+          margin-top: 1.875rem;
+        }
+
         display: inline-block;
         vertical-align: middle;
-        margin: 1.375rem 1rem;
+        margin: 1.875rem 1rem;
+
       }
 
     }
