--- a/_src/assets/style/partials/_hero.scss
+++ b/_src/assets/style/partials/_hero.scss
@@ -34,10 +34,11 @@
   }
 
   .content {
+
     z-index: 1;
     position: absolute;
     bottom: 20%;
-    left: 3rem;
+    left: 1rem;
     right: 3rem;
     text-align: center;
     opacity: 0;
@@ -49,6 +50,12 @@
       timing-function: ease-out;
     }
     text-shadow: 0px 0px 0.25rem transparentize($black, 0.5);
+
+    @media screen and (min-width: $screen-xs) {
+      left: 3rem;
+      right: 3rem;
+    }
+
   }
 
   h1,
@@ -79,6 +86,21 @@
 
     @media screen and (min-width: $screen-md) {
       font-size: 1.375rem;
+    }
+
+  }
+
+  span {
+
+    display: block;
+    clear: both;
+    font-size: 0.5rem;
+    text-indent: -9999px;
+
+    @media screen and (min-width: $screen-sm) {
+      display: inline;
+      text-indent: 0px;
+      font-size: inherit;
     }
 
   }
