--- a/_src/assets/style/partials/_variables.scss
+++ b/_src/assets/style/partials/_variables.scss
@@ -10,7 +10,11 @@ $font-main: 'futura-pt', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
 $font-bold: 'futura-pt-bold', $font-main;
 $font-size: 16px;
 
-$screen-xs: 400px;
-$screen-sm: 768px;
-$screen-md: 1024px;
-$screen-lg: 1200px;
+$screen-xs: 25rem;
+$screen-xs-px: 400px;
+$screen-sm: 48rem;
+$screen-sm-px: 768px;
+$screen-md: 64rem;
+$screen-md-px: 1024px;
+$screen-lg: 75rem;
+$screen-lg-px: 1024px;
