--- a/_src/assets/style/style.scss
+++ b/_src/assets/style/style.scss
@@ -4,5 +4,5 @@
 @import "partials/typography";
 @import "partials/global";
 @import "partials/hero";
-
 @import "partials/nav";
+@import "partials/wedding-party";
