--- a/_src/assets/style/style.scss
+++ b/_src/assets/style/style.scss
@@ -6,3 +6,5 @@
 @import "partials/hero";
 @import "partials/nav";
 @import "partials/wedding-party";
+@import "partials/map";
+@import "partials/photos";
