--- a/_src/assets/style/partials/_hero.scss
+++ b/_src/assets/style/partials/_hero.scss
@@ -1,14 +1,14 @@
 .hero {
 
   position: relative;
-  height: 100vh;
+  height: 570px;
   color: $white;
 
   @media screen and (min-width: $screen-sm) {
     height: calc(100vh - 5rem);
   }
 
-  @media screen and (min-height: 500px) {
+  @media screen and (min-width: $screen-sm) and (min-height: 500px) {
     min-height: 650px;
   }
 
@@ -22,7 +22,7 @@
     background: {
       size: cover;
       position: center bottom;
-      image: url('./dist/images/hero.jpg');
+      image: url('./dist/images/jb.jpg');
     }
     opacity: 0;
     animation: {
@@ -37,9 +37,9 @@
 
     z-index: 1;
     position: absolute;
-    bottom: 20%;
+    bottom: 10%;
     left: 1rem;
-    right: 3rem;
+    right: 1rem;
     text-align: center;
     opacity: 0;
     animation: {
@@ -51,9 +51,10 @@
     }
     text-shadow: 0px 0px 0.25rem transparentize($black, 0.5);
 
-    @media screen and (min-width: $screen-xs) {
+    @media screen and (min-width: $screen-sm) {
       left: 3rem;
       right: 3rem;
+      bottom: 20%;
     }
 
   }
