--- a/_src/_includes/wedding-party.html
+++ b/_src/_includes/wedding-party.html
@@ -3,11 +3,11 @@
   <div class="party-member">
     <img data-src="{{ site.imagebase }}/people/cropped/{{ member.file }}">
     <div class="party-member-inner">
-      <div class="member-name">{{ member.name }}</div>
-      {% if member.title %}<div class="member-title">{{ member.title }}</div>{% endif %}
-      <div class="member-description">
-        <p>{{ member.description }}</p>
-      </div>
+      <h4 class="member-name">{{ member.name }}</h4>
+      {% if member.title %}<p class="member-title"><strong>{{ member.title }}</strong></p>{% endif %}
+      {% if member.description %}<div class="member-description">
+        <p>{{ member.description.length }}</p>
+      </div>{% endif %}
     </div>
   </div>
   {% endfor %}
