--- a/_src/_layouts/default.html
+++ b/_src/_layouts/default.html
@@ -15,20 +15,7 @@
 
 {{ content }}
 
-<script>
-(function(w, d){
-	var b = d.getElementsByTagName('body')[0];
-	var s = d.createElement("script"); s.async = true;
-	var v = !("IntersectionObserver" in w) ? "8.7.1" : "10.5.2";
-	s.src = "https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/" + v + "/lazyload.min.js";
-	w.lazyLoadOptions = {}; // Your options here. See "recipes" for more information about async.
-	b.appendChild(s);
-}(window, document));
-</script>
-<!-- <script src="https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js"></script> -->
-<script>
-{% include scripts.min.js %}
-</script>
+{% include scripts.html %}
 
 </body>
 </html>
