--- a/_src/assets/style/partials/_photos.scss
+++ b/_src/assets/style/partials/_photos.scss
@@ -6,11 +6,11 @@
 
     display: block;
 
-    &:nth-child(1),
-    &:nth-child(2) {
-      float: left;
-      width: 50%;
-    }
+    // &:nth-child(1),
+    // &:nth-child(2) {
+    //   float: left;
+    //   width: 50%;
+    // }
 
   }
 
