--- a/_src/assets/style/partials/_global.scss
+++ b/_src/assets/style/partials/_global.scss
@@ -33,7 +33,15 @@ img {
 main {
 
   section {
+
     padding: 2rem 0px;
+
+    &:after {
+      content: ' ';
+      display: block;
+      clear: both;
+    }
+
   }
 
 }
