--- a/_src/assets/style/style.scss
+++ b/_src/assets/style/style.scss
@@ -5,6 +5,7 @@
 @import "partials/global";
 @import "partials/hero";
 @import "partials/nav";
+@import "partials/details";
 @import "partials/wedding-party";
 @import "partials/map";
 @import "partials/photos";
