--- a/_src/assets/style/partials/_wedding-party.scss
+++ b/_src/assets/style/partials/_wedding-party.scss
@@ -181,6 +181,15 @@
 
     }
 
+    p {
+      font-size: 1.25rem;
+      line-height: 1.4;
+    }
+
+    .attribution {
+      text-align: right;
+    }
+
     .member-name {
       margin-bottom: 1rem;
     }
