--- a/_src/_includes/wedding-party.html
+++ b/_src/_includes/wedding-party.html
@@ -1,7 +1,8 @@
 <div class="wedding-party-group">
   {% for member in site.data.members %}
   <div class="party-member">
-    <img data-src="{{ site.imagebase }}/people/cropped/{{ member.file }}">
+    <img class="cropped" data-src="{{ site.imagebase }}/people/cropped/{{ member.file }}">
+    <img class="full" data-src="{{ site.imagebase }}/people/cropped/{{ member.file }}">
     <div class="party-member-inner">
       <h4 class="member-name">{{ member.name }}</h4>
       {% if member.title %}<p class="member-title"><strong>{{ member.title }}</strong></p>{% endif %}
