--- a/_src/assets/style/partials/_details.scss
+++ b/_src/assets/style/partials/_details.scss
@@ -1,5 +1,10 @@
 [data-section="details"] {
 
+  .icon-map-marker {
+    width: 0.75em;
+    height: 1.5em;
+  }
+
   .details-block {
 
     display: flex;
@@ -10,13 +15,70 @@
     flex-flow: row wrap;
     align-content: flex-end;
 
-    img {
-      order: 1;
+    &:nth-of-type(2) {
+      margin-top: 4rem;
     }
 
-    .details-content {
-      order: 2;
+    .details-images {
+      margin-top: 2rem;
     }
+
+    @media screen and (min-width: $screen-md) {
+
+      &:nth-of-type(2) {
+
+        .details-images {
+          order: 1;
+        }
+
+        .details-content {
+          order: 2;
+          margin-left: 5%;
+          margin-right: 0px;
+        }
+
+      }
+
+      .details-content {
+        margin-right: 5%;
+        width: 65%;
+      }
+
+      .details-images {
+        width: 30%;
+      }
+
+    }
+
+    $details-offset: 4rem;
+
+    @media screen and (min-width: $screen-md + ($details-offset * 3)) {
+
+      &:nth-of-type(2) {
+
+        .details-images {
+          transform: translate($details-offset * -1, 0px);
+        }
+
+        .details-content {
+          margin: 0px;
+          transform: translate($details-offset, 0px);
+        }
+
+      }
+
+      .details-content {
+        margin-right: 0px;
+        transform: translate($details-offset * -1, 0px);
+        width: 70%;
+      }
+
+      .details-images {
+        transform: translate($details-offset, 0px);
+      }
+
+    }
+
 
   }
 
