--- a/_src/assets/style/partials/_wedding-party.scss
+++ b/_src/assets/style/partials/_wedding-party.scss
@@ -69,7 +69,7 @@
 
   }
 
-  img {
+  .cropped {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -80,6 +80,10 @@
     height: 100%;
     max-width: none;
     max-height: none;
+  }
+
+  .full {
+    display: none;
   }
 
   @media screen and (min-width: $screen-xs) {
@@ -179,6 +183,16 @@
         opacity: 0.75;
       }
 
+    }
+
+    .party-member-inner {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+      flex-flow: row wrap;
+      align-content: flex-end;
     }
 
     p {
