--- a/_src/assets/style/style.scss
+++ b/_src/assets/style/style.scss
@@ -8,4 +8,5 @@
 @import "partials/details";
 @import "partials/wedding-party";
 @import "partials/map";
+@import "partials/registry";
 @import "partials/photos";
