--- a/_src/assets/style/partials/_details.scss
+++ b/_src/assets/style/partials/_details.scss
@@ -20,7 +20,13 @@
     }
 
     .details-images {
+
       margin-top: 2rem;
+
+      img {
+        max-width: 300px;
+      }
+
     }
 
     @media screen and (min-width: $screen-md) {
@@ -45,7 +51,14 @@
       }
 
       .details-images {
+
         width: 30%;
+
+        img {
+          max-width: none;
+          width: 100%;
+        }
+
       }
 
     }
