--- a/_src/assets/style/partials/_global.scss
+++ b/_src/assets/style/partials/_global.scss
@@ -34,7 +34,7 @@ main {
 
   section {
 
-    padding: 4rem 0px;
+    padding: 3rem 0px;
 
     &:after {
       content: ' ';
@@ -51,7 +51,7 @@ address {
   font-style: normal;
 
   strong {
-    color: $green;
+    color: $color-accent;
   }
 
 }
