--- a/_src/assets/style/partials/_variables.scss
+++ b/_src/assets/style/partials/_variables.scss
@@ -6,6 +6,7 @@ $green: #2e6947;
 
 $color-headline: $black-off;
 $color-text: $black-off;
+$color-accent: $green;
 
 $font-main: 'futura-pt', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 $font-bold: 'futura-pt-bold', $font-main;
