--- a/_src/assets/style/style.scss
+++ b/_src/assets/style/style.scss
@@ -3,10 +3,12 @@
 @import "partials/animations";
 @import "partials/typography";
 @import "partials/global";
+@import "partials/blocks";
 @import "partials/hero";
 @import "partials/nav";
 @import "partials/details";
 @import "partials/wedding-party";
 @import "partials/map";
+@import "partials/accommodations";
 @import "partials/registry";
 @import "partials/photos";
