--- a/_src/assets/style/partials/_accommodations.scss
+++ b/_src/assets/style/partials/_accommodations.scss
@@ -1,7 +1,7 @@
-[data-section="accommodations"] {
-
-  h2 {
-    // color: $color-accent;
-  }
-
-}
+// [data-section="accommodations"] {
+//
+//   h2 {
+//     color: $color-accent;
+//   }
+//
+// }
