--- a/_src/_includes/wedding-party.html
+++ b/_src/_includes/wedding-party.html
@@ -1,8 +1,8 @@
 <div class="wedding-party-group">
   {% for member in site.data.members %}
-  <div class="party-member">
+  <div class="party-member" data-full-src="">
     <img class="cropped" data-src="{{ site.imagebase }}/people/cropped/{{ member.file }}">
-    <img class="full" data-src="{{ site.imagebase }}/people/cropped/{{ member.file }}">
+    {% if member.file_full %}<img class="full" data-src="{{ site.imagebase }}/people/full/{{ member.file_full }}">{% endif %}
     <div class="party-member-inner">
       <h4 class="member-name">{{ member.name }}</h4>
       {% if member.title %}<p class="member-title"><strong>{{ member.title }}</strong></p>{% endif %}
