--- a/_src/assets/style/partials/_wedding-party.scss
+++ b/_src/assets/style/partials/_wedding-party.scss
@@ -189,27 +189,52 @@
 
     }
 
-    .party-member-inner {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: row;
-      flex-wrap: wrap;
-      flex-flow: row wrap;
-      align-content: flex-end;
+    // .party-member-inner {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   flex-direction: row;
+    //   flex-wrap: wrap;
+    //   flex-flow: row wrap;
+    //   align-content: flex-end;
+    // }
+
+    img {
+      display: block;
+      margin: 0px auto;
+      max-width: 80%;
+      max-height: 200px;
+    }
+
+    img + .popup-content {
+      margin-top: 1rem;
     }
 
     p {
-      font-size: 1.25rem;
+      font-size: 1rem;
       line-height: 1.4;
     }
 
     .attribution {
+      padding-right: 4rem;
       text-align: right;
     }
 
     .member-name {
       margin-bottom: 1rem;
+    }
+
+    @media screen and (min-width: $screen-md) {
+
+      img {
+        max-width: 400px;
+        max-height: 500px;
+      }
+
+      p {
+        font-size: 1.25rem;
+      }
+
     }
 
   }
