--- a/_src/_layouts/default.html
+++ b/_src/_layouts/default.html
@@ -5,6 +5,7 @@
   <title>{{ site.title }} | {{ site.wedding_date }} | {{ site.wedding_location }}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
+  <link rel="shortcut icon" href="{{ site.imagebase }}/favicon.png" />
   <link rel="stylesheet" href="https://use.typekit.net/rey8lub.css" />
   <style>
   {% include style.min.css %}
