--- a/_src/assets/style/partials/_hero.scss
+++ b/_src/assets/style/partials/_hero.scss
@@ -21,8 +21,8 @@
     bottom: 0px;
     background: {
       size: cover;
-      position: center bottom;
-      image: url('./dist/images/jb.jpg');
+      position: center center;
+      image: url('./dist/images/jb_cropped.jpg');
     }
     opacity: 0;
     animation: {
