--- a/_src/_includes/wedding-party.html
+++ b/_src/_includes/wedding-party.html
@@ -1,6 +1,6 @@
 <div class="wedding-party-group">
   {% for member in site.data.members %}
-  <div class="party-member" data-full-src="">
+  <div class="party-member">
     <img class="cropped" data-src="{{ site.imagebase }}/people/cropped/{{ member.file }}">
     {% if member.file_full %}<img class="full" data-src="{{ site.imagebase }}/people/full/{{ member.file_full }}">{% endif %}
     <div class="party-member-inner">
