--- a/_src/assets/style/partials/_details.scss
+++ b/_src/assets/style/partials/_details.scss
@@ -1,8 +1,2 @@
-[data-section="details"] {
-
-  .icon-map-marker {
-    width: 0.75em;
-    height: 1.5em;
-  }
-
-}
+// [data-section="details"] {
+// }
