--- a/_src/assets/style/partials/_variables.scss
+++ b/_src/assets/style/partials/_variables.scss
@@ -2,7 +2,9 @@
 $black: #000;
 $black-off: #313131;
 $white: #fff;
+$red: #f74848;
 $green: #2e6947;
+$blue: #0075ff;
 
 $color-headline: $black-off;
 $color-text: $black-off;
