--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <title>{{ site.title }} | {{ site.wedding_date }} | {{ site.wedding_location }}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
+	<meta property="og:title" content="{{ site.title }}" />
+	<meta property="og:description" content="{{ site.wedding_date }}. {{ site.wedding_location }}" />
 	<meta property="og:image" content="{{ site.production_url }}/dist/images/hug.jpg" />
   <link rel="shortcut icon" href="{{ site.imagebase }}/favicon.png" />
   <link rel="stylesheet" href="https://use.typekit.net/rey8lub.css" />
