--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
 	<meta property="og:title" content="{{ site.title }}" />
+	<meta name="description" content="{{ site.wedding_date }}. {{ site.wedding_location }}" />
 	<meta property="og:description" content="{{ site.wedding_date }}. {{ site.wedding_location }}" />
 	<meta property="og:image" content="{{ site.production_url }}/dist/images/hug.jpg" />
   <link rel="shortcut icon" href="{{ site.imagebase }}/favicon.png" />
